--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       (function () {
         // Defining the hash before the main bundle allows the bundle access window.hash
         window.wordle = window.wordle || {};
-        window.wordle.hash = 'script';
+        window.wordle.hash = 'c1506a22';
       })();
     </script>
     <script src="main.script.js"></script>
